Fixed compiler errors/warnings. Added uSysUtils.pas and refactored code. Rewrote MemMap.pas. Added lmc_get_window_path to available LUA functions. Added version information to WinHook DLL (version set as 2.0.0.0). Changed uWHookInt.pas to using queried temp directory instead of hard-coded path. Removed command line parameters for main project. Tidied up tiny portions of code.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
 out
-src/lib
 src/backup
-inc/LazSerial/lib/
-inc/synapse40/lib/
-inc/uniqueinstance-1.0/lib/
+src/lib
+inc/DirectX_Borland_D9-10/backup
+inc/DirectX_Borland_D9-10/lib
+inc/LazSerial/backup
+inc/LazSerial/lib
+inc/lua/backup
+inc/lua/lib
+inc/synapse40/backup
+inc/synapse40/lib
+inc/uniqueinstance-1.0/backup
+inc/uniqueinstance-1.0/lib
+inc/XPL_SDK213_XPLM/backup
+inc/XPL_SDK213_XPLM/lib
