--- a/src/WinHook.lpi
+++ b/src/WinHook.lpi
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="10"/>
     <PathDelim Value="\"/>
     <General>
       <Flags>
@@ -18,6 +18,8 @@
       <EnableI18N LFM="False"/>
     </i18n>
     <VersionInfo>
+      <UseVersionInfo Value="True"/>
+      <MajorVersionNr Value="2"/>
       <StringTable ProductVersion=""/>
     </VersionInfo>
     <BuildModes Count="1">
@@ -35,17 +37,14 @@
       <Unit0>
         <Filename Value="WinHook.lpr"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="WinHook"/>
       </Unit0>
       <Unit1>
         <Filename Value="uHookCommon.pas"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="uHookCommon"/>
       </Unit1>
       <Unit2>
         <Filename Value="uWHookInt.pas"/>
         <IsPartOfProject Value="True"/>
-        <UnitName Value="uWHookInt"/>
       </Unit2>
     </Units>
   </ProjectOptions>
@@ -67,12 +66,6 @@
         <ExecutableType Value="Library"/>
       </Options>
     </Linking>
-    <Other>
-      <CompilerMessages>
-        <MsgFileName Value=""/>
-      </CompilerMessages>
-      <CompilerPath Value="$(CompPath)"/>
-    </Other>
   </CompilerOptions>
   <Debugging>
     <Exceptions Count="3">
