--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,83 @@
-out
-src/backup
-src/lib
-inc/DirectX_Borland_D9-10/backup
-inc/DirectX_Borland_D9-10/lib
-inc/LazSerial/backup
-inc/LazSerial/lib
-inc/lua/backup
-inc/lua/lib
-inc/synapse40/backup
-inc/synapse40/lib
-inc/uniqueinstance-1.0/backup
-inc/uniqueinstance-1.0/lib
-inc/XPL_SDK213_XPLM/backup
-inc/XPL_SDK213_XPLM/lib
+# Uncomment these types if you want even more clean repository. But be careful.
+# It can make harm to an existing project source. Read explanations below.
+#
+# Resource files are binaries containing manifest, project icon and version info.
+# They can not be viewed as text or compared by diff-tools. Consider replacing them with .rc files.
+#*.res
+#
+# Type library file (binary). In old Delphi versions it should be stored.
+# Since Delphi 2009 it is produced from .ridl file and can safely be ignored.
+#*.tlb
+#
+# Diagram Portfolio file. Used by the diagram editor up to Delphi 7.
+# Uncomment this if you are not using diagrams or use newer Delphi version.
+#*.ddp
+#
+# Visual LiveBindings file. Added in Delphi XE2.
+# Uncomment this if you are not using LiveBindings Designer.
+#*.vlb
+#
+# Deployment Manager configuration file for your project. Added in Delphi XE2.
+# Uncomment this if it is not mobile development and you do not use remote debug feature.
+#*.deployproj
+
+# Common IDE backup files/directories
+*.~*~
+__history
+__recovery
+**/backup/
+
+# Castalia statistics file
+*.stat
+
+# Delphi IDE local files (user-specific info)
+*.local
+*.identcache
+*.projdata
+*.tvsconfig
+*.dsk
+
+# Delphi IDE auto-generated files (duplicated info)
+*.cfg
+*Resource.rc
+
+# Delphi compiler output files
+*.drc
+*.map
+*.jdbg
+*.tds
+*.bpl
+*.dcu
+*.dcp
+
+# C++ Builder compiler output files
+*.bpi
+*.obj
+*.lib
+*.hpp
+*.i
+*.il?
+*.#??
+*.pbi
+
+# Lazarus output files
+*.ppu
+*.lps
+*.or
+*.rst
+*.compiled
+
+# 64-bit compiler output files
+*.[ao]
+
+# Common compiler output files
+*.exe
+#*.dll
+
+# Log files
+*.log
+
+# Generated directories
+**/out/
+**/inc/lib/
+**/src/lib/
