WARNING: Reset build numbers to 1.0.0.x. Added versioning info as well as ensured all projects used incrementing build numbers. Also included the tag of the repository (i.e., https://github.com/Andreas-Toth/luamacros") to allow builds to be distinguished from other builds. Reflected tracking information in README.md.

--- a/src/WinHook.lpi
+++ b/src/WinHook.lpi
@@ -19,8 +19,10 @@
     </i18n>
     <VersionInfo>
       <UseVersionInfo Value="True"/>
-      <MajorVersionNr Value="2"/>
-      <StringTable ProductVersion=""/>
+      <AutoIncrementBuild Value="True"/>
+      <MajorVersionNr Value="1"/>
+      <BuildNr Value="5"/>
+      <StringTable ProductName="https://github.com/Andreas-Toth/luamacros" ProductVersion="1.0"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
