--- a/src/LuaMacros.lpi
+++ b/src/LuaMacros.lpi
@@ -17,9 +17,9 @@
     <VersionInfo>
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
-      <MinorVersionNr Value="1"/>
-      <BuildNr Value="353"/>
-      <StringTable ProductVersion=""/>
+      <MajorVersionNr Value="1"/>
+      <BuildNr Value="5"/>
+      <StringTable ProductName="https://github.com/Andreas-Toth/luamacros" ProductVersion="1.0"/>
     </VersionInfo>
     <BuildModes Count="1">
       <Item1 Name="Default" Default="True"/>
